--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -5,6 +5,7 @@
 pytest>=7.0.0
 pytest-cov>=4.0.0
 pytest-mock>=3.10.0
+pytest-xdist>=3.0.0  # For parallel test execution
 
 # Code quality
 black>=23.0.0
@@ -22,4 +23,13 @@ sphinx-rtd-theme>=1.2.0
 
 # Development tools
 pre-commit>=3.0.0
-twine>=4.0.0 
+twine>=4.0.0
+
+# Development utilities
+tox>=4.0.0
+
+# Additional testing utilities for cross-account and script testing
+responses>=0.23.0  # For mocking HTTP requests
+freezegun>=1.2.0   # For mocking time-dependent tests
+factory-boy>=3.2.0 # For creating test data
+parameterized>=0.9.0 # For parameterized tests 
